# url2pdf_android

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kimotu/url2pdf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kimotu/url2pdf/: HttpUtill.kt  MainActivity.kt  Rustlib.kt  UrlReceiveActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_urlreceiver.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kimotu/url2pdf/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
html2pdf/: Cargo.toml
html2pdf/src/: html2img.rs  img2pdf.rs  lib.rs  png.rs
